--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 * {
-  background-color: lightpink;
+  /* background-color: lightpink;
   max-height: 100%;
-  overflow: hidden;
+  overflow: hidden; */
 }
 
 body {
