feat: 다시 테스트하기 기능 추가

--- a/css/result-style.css
+++ b/css/result-style.css
@@ -51,7 +51,20 @@ body {
 #result-share {
   font-family: "TTWanjudaedunsancheB";
   padding: 1em 2em;
-  background-color: lightcoral;
+  background-color: lightgrey;
+  font-size: 20px;
+  text-decoration: none;
+  text-align: center;
+  cursor: pointer;
+  border-radius: 15px;
+  color: black;
+}
+
+#result-return {
+  font-family: "TTWanjudaedunsancheB";
+  padding: 1em 2em;
+  margin-left: 10px;
+  background-color: lightgrey;
   font-size: 20px;
   text-decoration: none;
   text-align: center;
