feat: result.css 개선

--- a/css/result-style.css
+++ b/css/result-style.css
@@ -45,10 +45,12 @@ body {
 }
 
 #result-share-container {
+  display: flex;
   margin: 30px;
 }
 
 #result-share {
+  flex-grow: 1;
   font-family: "TTWanjudaedunsancheB";
   padding: 1em 2em;
   background-color: lightgrey;
@@ -61,6 +63,7 @@ body {
 }
 
 #result-return {
+  flex-grow: 1;
   font-family: "TTWanjudaedunsancheB";
   padding: 1em 2em;
   margin-left: 10px;
